--- a/dd-java-agent/instrumentation/glassfish/glassfish.gradle
+++ b/dd-java-agent/instrumentation/glassfish/glassfish.gradle
@@ -31,6 +31,7 @@ dependencies {
   testImplementation project(':dd-java-agent:instrumentation:grizzly-2')
   testImplementation deps.guava
   testImplementation group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '4.0'
+  testImplementation project(':dd-java-agent:instrumentation:grizzly-http-2.3.20')
 
   latestDepTestImplementation group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '5+'
 }
