--- a/settings.gradle
+++ b/settings.gradle
@@ -171,6 +171,8 @@ include ':dd-java-agent:instrumentation:jdbc'
 include ':dd-java-agent:instrumentation:jdbc:scalikejdbc'
 include ':dd-java-agent:instrumentation:jedis-1.4'
 include ':dd-java-agent:instrumentation:jedis-3.0'
+include ':dd-java-agent:instrumentation:jersey-2-appsec'
+include ':dd-java-agent:instrumentation:jersey-3-appsec'
 include ':dd-java-agent:instrumentation:jetty-7.0'
 include ':dd-java-agent:instrumentation:jetty-7.6'
 include ':dd-java-agent:instrumentation:jetty-9'
